# computer-graphics

./: CGProject.sln  CGProject.vcxproj  CGProject.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  Main.cpp  README.md  coordinates.txt
Bitmap/: Bitmap.cpp  Bitmap.hpp  BitmapHeaderFile.h  BitmapHeaderInfo.h
Debug/: CGProject.exe.recipe  CGProject.ilk  CGProject.vcxproj.FileListAbsolute.txt
Debug/CGProject.tlog/: CGProject.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: CGProject.exe.recipe  CGProject.vcxproj.FileListAbsolute.txt
Release/CGProject.tlog/: CGProject.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Utils/: AmbientLight.cpp  AmbientLight.hpp  Camera.cpp  Camera.hpp  Cluster.cpp  Cluster.h  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  IntersectionPoint.cpp  IntersectionPoint.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Matrix.cpp  Matrix.hpp  Object_.cpp  Object_.hpp  Plane.cpp  Plane.hpp  PontualLight.cpp  PontualLight.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp  SpotLight.cpp  SpotLight.hpp  Triangle.cpp  Triangle.hpp  Utils.cpp  Utils.hpp  Vector.cpp  Vector.hpp
x64/Debug/: vc143.idb
x64/Debug/CGProject.tlog/: CGProject.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
x64/Release/CGProject.tlog/: CGProject.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
